--- a/index.html
+++ b/index.html
@@ -5,33 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    
-    <script src="index.js" defer></script>
-    <link rel="sylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+   
 </head>
 <body>
-    <h1>Calculator</h1>
+     <h1>Calculator</h1>
     <div class='calc'>
-        <div class="box">dighslid</div>
-        <div class="row1">
+        <div class="field">12</div>
+        <div class="row">
             <button class="num">7</button>
             <button class="num">8</button>
             <button class="num">9</button>
             <button class="operator">/</button>
         </div>    
-        <div class="row2">
+        <div class="row">
             <button class="num">4</button>
             <button class="num">5</button>
             <button class="num">6</button>
             <button class="operator">*</button>
         </div>
-        <div class="row3">
+        <div class="row">
             <button class="num">1</button>
             <button class="num">2</button>
             <button class="num">3</button>
             <button class="operator">-</button>
         </div>
-        <div class="row4">
+        <div class="row">
             <button class="num">0</button>
             <button class="num">.</button>
             <button class="operator">=</button>
