--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-   
+    <script src="index.js" defer></script>
 </head>
 <body>
      <h1>Calculator</h1>
     <div class='calc'>
-        <div class="field">12</div>
+        <div class="field"></div>
         <div class="row">
-            <button class="num">7</button>
+            <button class="num" >7</button>
             <button class="num">8</button>
             <button class="num">9</button>
             <button class="operator">/</button>
