--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="row">
             <button class="num">0</button>
             <button class="num">.</button>
-            <button class="operator">=</button>
+            <button class="clear">C</button>
+            <button class="equals">=</button>
             <button class="operator">+</button>
         </div>
     </div>
