--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
      <h1>Calculator</h1>
     <div class='calc'>
-        <div class="field"></div>
+        <div class="'textarea">
+            <div class="field"></div>
+        </div>
         <div class="row">
-            <button class="num" >7</button>
-            <button class="num">8</button>
-            <button class="num">9</button>
-            <button class="operator">/</button>
+        <button class="num" >7</button>
+        <button class="num">8</button>
+        <button class="num">9</button>
+        <button class="operator">/</button>
+        
+
         </div>    
         <div class="row">
             <button class="num">4</button>
