--- a/index.html
+++ b/index.html
@@ -15,31 +15,46 @@
         <div class="field"> </div>
         
         <div class="row">
-        <button class="num" >7</button>
-        <button class="num">8</button>
-        <button class="num">9</button>
-        <button class="operator">/</button>
-        
-
+            <div class="left">
+                <button class="num" >7</button>
+                <button class="num">8</button>
+                <button class="num">9</button>
+            </div>
+            <div class="right">
+                <button class="back">⌫</button>
+            </div>
         </div>    
         <div class="row">
-            <button class="num">4</button>
-            <button class="num">5</button>
-            <button class="num">6</button>
-            <button class="operator">*</button>
+            <div class="left">
+                <button class="num">4</button>
+                <button class="num">5</button>
+                <button class="num">6</button>
+            </div>
+            <div class="right">
+                <button class="operator">*</button>
+                <button class="operator">/</button>
+            </div>
         </div>
         <div class="row">
-            <button class="num">1</button>
-            <button class="num">2</button>
-            <button class="num">3</button>
-            <button class="operator">-</button>
+            <div class="left">
+                <button class="num">1</button>
+                <button class="num">2</button>
+                <button class="num">3</button>
+            </div>
+            <div class="right">
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+            </div>
         </div>
         <div class="row">
-            <button class="num">0</button>
-            <button class="num">.</button>
-            <button class="clear">C</button>
-            <button class="equals">=</button>
-            <button class="operator">+</button>
+            <div class="left">
+                <button class="num">0</button>
+                <button class="num">.</button>
+                <button class="clear">AC</button>
+            </div>
+            <div class="right"> 
+                <button class="equals">=</button>
+            </div>
         </div>
     </div>
 </body>
